fix  and update - 23.09.25

--- a/public/index.html
+++ b/public/index.html
@@ -406,7 +406,7 @@
                         </div>
                         <div class="footer-contact">
                             <i class="fas fa-phone footer-contact-icon"></i>
-                            <span class="footer-contact-text">+994 77 233 3838</span>
+                            <span class="footer-contact-text">+994 77 233 72 72</span>
                         </div>
                         <div class="footer-contact">
                             <i class="fas fa-map-marker-alt footer-contact-icon"></i>
